tests/integrations/basic-fail/tests/actual_tests/bad_pattern_multiple.rs
use basic_fail::add;

fn main() {
    add("42", 3);
    //~^ ERROR: miesmätsched types
    add("42", 3);
    //~^ ERROR: miesmätsched types
}
